--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Melanchall.DryWetMidi" version="5.0.0" targetFramework="net461" />
+  <package id="Sanford.Multimedia.Midi" version="6.6.2" targetFramework="net461" />
 </packages>
