added packing and unpacking function

--- a/WindowsFormsApp3.csproj
+++ b/WindowsFormsApp3.csproj
@@ -97,6 +97,7 @@
     <Compile Include="MyRectangle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestFuncs.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
