Changed selection of track at LibForm

--- a/WindowsFormsApp3.csproj
+++ b/WindowsFormsApp3.csproj
@@ -171,5 +171,8 @@
   <ItemGroup>
     <None Include="Resources\closeIcon.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\songNameBox.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
